--- a/Templates/main.html
+++ b/Templates/main.html
@@ -68,7 +68,7 @@
 </script>
 </TMPL_IF>
 </head>
-<body>
+<body<TMPL_IF lang_rtl> style="direction:rtl;"</TMPL_IF>>
 <div class="wrapper">
    <div id="header">
       <div class="container1">
